# ohitsmetables

./: .gitignore  README.md  about.html  food.html  footer.html  index.html  loadNavigation.js  maps.html  nav.html  npcs.html  pyproject.toml  render.yml  requirements.txt  tables.html
app/: __init__.py  routes.py  sheets.py
app/static/: theme.css
app/static/js/: site.js
app/templates/: about.html  base.html  characters.html  food.html  index.html  landing.html  landmarks.html  quests.html  random_encounters.html  room_dressing.html  rumors.html  shops.html
assets/css/: custom.css  styles.css
css/: styles.css
html/: food.html  maps.html  nav.html  npcs.html  people.html  places.html  things.html
html/tables/: campfire-food.html
pages/: food.html  index.html
project-folder/: about.html  index.html  maps.html  tables.html
project-folder/html/: nav.html
project-folder/static/html/: nav.html
project-folder/static/js/: loadNavigation.js
site_folder/: index.html  loadNavigation.js  nav.html
static/: styles.css  theme.css
static/css/: custom.css
static/html/: footer.html  nav.html
static/js/: loadNavigation.js
