[tool.poetry]
name = "ohitsmetables"
version = "0.1.0"
description = "A whimsical RPG tool generator"
authors = ["Katie <katie.sipos@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = ">=3.1.0,<4.0.0"
gspread = ">=6.2.0,<7.0.0"
oauth2client = ">=4.1.3,<5.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
gunicorn = ">=23.0.0,<24.0.0"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.166.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

